labs/addons/cert-manager/manifests/ingress-letsencrypt-tls.yaml
apiVersion: v1
kind: Pod
metadata:
  name: web1
  labels:
    app: nginx
spec:
  containers:
    - name: web
      image: mirror.gcr.io/library/nginx:latest
      ports:
        - name: web
          containerPort: 80
          protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: default
spec:
  selector:
    app: nginx
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  type: ClusterIP

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
  name: example
  namespace: default
spec:
  rules:
  - host: example.com
    http:
      paths:
      - backend:
          serviceName: nginx
          servicePort: 80
        path: /
  tls:
  - hosts:
    - example.com
    secretName: example-com-tls
